--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
-sudo: required
+ sudo: required
 srvices:
  - docker
 
 before_install:
- - docker build -t momo/docker-react  -f Dockerfile.dev .
+ - docker build -t lpisridocker/docker-react  -f Dockerfile.dev .
 
 script:
- - docker run momo/docker-react npm run test -- --coverage
+ - docker run lpisridocker/docker-react npm run test -- --coverage
+
+end
