--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
  sudo: required
 srvices:
  - docker
-
+ install: travis_wait 30 mvn install
 before_install:
  - docker build -t lpisridocker/docker-react  -f Dockerfile.dev .
 
 script:
  - docker run lpisridocker/docker-react npm run test -- --coverage
 
-end
